<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/float_value"
        android:text="@string/type_bool" />

    <CheckBox
        android:id="@+id/bool_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/float_value"
        android:text="@string/type_float" />

    <EditText
        android:id="@+id/float_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/int_value"
        android:text="@string/type_int" />

    <EditText
        android:id="@+id/int_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/long_value"
        android:text="@string/type_long" />

    <EditText
        android:id="@+id/long_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/string_value"
        android:text="@string/type_string" />

    <EditText
        android:id="@+id/string_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect|textAutoComplete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/string_set_value"
        android:text="@string/type_string_set" />

    <EditText
        android:id="@+id/string_set_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoCorrect|textAutoComplete" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onReadClicked"
            android:text="@string/read"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onWriteClicked"
            android:text="@string/write"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>